# sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-watch.yml  sdk-examples-smoke-test.yml
docs/: BUILD_INSTRUCTIONS.md  PUBLISHING.md
pilotprotocol/: __init__.py  _runtime.py  cli.py  client.py
scripts/: build-binaries.sh  build.sh  generate-coverage-badge.sh  publish.sh  test-coverage.sh
tests/: smoke_list_agents.py  test_cli.py  test_client.py  test_client_edges.py  test_fuzz.py  test_runtime.py  test_runtime_edges.py  test_services.py
